@@ -4406,12 +4406,13 @@ dimension
             <term>ST_AsSVG(geometry, [rel], [precision])</term>
 
             <listitem>
-              <para>Return the geometry as an SVG path data. Use 1 as second
-              argument to have the path data implemented in terms of relative
-              moves, the default (or 0) uses absolute moves. Third argument
-              may be used to reduce the maximum number of decimal digits used
-              in output (defaults to 15). Point geometries will be rendered as
-              cx/cy when 'rel' arg is 0, x/y when 'rel' is 1.</para>
+              <para>Return the geometry as SVG path data. Use 1 as second argument to have the 
+              path data implemented in terms of relative moves, the default (or 0) uses 
+              absolute moves. Third argument may be used to reduce the maximum number of 
+              decimal digits used in output (defaults to 15). Point geometries will be 
+              rendered as cx/cy when 'rel' arg is 0, x/y when 'rel' is 1. Multipoint 
+              geometries are delimited by commas (","), GeometryCollection geometries are 
+              delimited by semicolons (";").</para>
             </listitem>
           </varlistentry>
 
